fix: modal title line spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,6 +68,8 @@ h4 {
   font-family: var(--subtitle-font-zh, serif);
   font-size: 1.2rem;
   padding: 0.8rem;
+  padding-bottom: 1.2rem;
+
 }
 
 span.row-letter {
